--- a/info_produccion.html
+++ b/info_produccion.html
@@ -36,7 +36,7 @@
         <p>Explora más secciones:</p>
         <ul>
             <li><a href="index.html">Página Principal</a></li>
-            <li><a href="sinopsis.html">Sinopsis</a></li>
+            <li><a href="Sinopsis.html">Sinopsis</a></li>
             <li><a href="multimedia.html">Imágenes y Multimedia</a></li>
             <li><a href="cines.html">Cines y Funciones</a></li>
         </ul>
