--- a/cines.html
+++ b/cines.html
@@ -49,7 +49,7 @@
         <p>Explora más...</p>
         <ul>
             <li><a href="index.html">Página Principal</a></li>
-            <li><a href="sinopsis.html">Sinopsis</a></li>
+            <li><a href="Sinopsis.html">Sinopsis</a></li>
             <li><a href="multimedia.html">Imágenes y Multimedia</a></li>
             <li><a href="info_produccion.html">Acerca de la Productora/Contacto</a></li>
         </ul>
